--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,8 +43,8 @@
 	// https://github.com/lokalise/i18n-ally/wiki/Path-Matcher
 	"i18n-ally.namespace": true,
 	"i18n-ally.pathMatcher": "{locale}/{namespaces}.json",
-	"i18n-ally.sourceLanguage": "zh-CN",
-	"i18n-ally.displayLanguage": "zh-CN",
+	"i18n-ally.sourceLanguage": "en-US",
+	"i18n-ally.displayLanguage": "en-US",
 	"i18n-ally.enabledFrameworks": [
 		"react-i18next"
 	],
